# abacate

./: README.md  pyproject.toml
dbt_abacate/: dbt_project.yml  profiles.yml
dbt_abacate/models/: customers.sql  orders.sql  sources.yml
dbt_abacate/models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
src/abacate/defs/: assets.py  resources.py
src/abacate/defs/dbt_ingest/: defs.yaml
