[project]
name = "abacate"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.5",
    "dagster-dbt>=0.28.5",
    "dagster-dg-cli>=1.12.5",
    "dagster-duckdb>=0.28.5",
    "dagster-webserver>=1.12.5",
    "dbt-duckdb>=1.10.0",
    "duckcli>=0.2.1",
    "duckdb>=1.4.3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "abacate"
registry_modules = [
    "abacate.components.*",
]


